----------------------------------------------------------------------
 OmegaT 4.1.5 update 4
----------------------------------------------------------------------
  6 Enhancements
  3 Bug fixes
  1 Localisation update
----------------------------------------------------------------------
4.1.5 update 4 vs 4.1.5 update 3

  Implemented requests:

  - Search selected text in the dictionary
  https://sourceforge.net/p/omegat/feature-requests/1401/

  - Separate paragraphs in Editor
  https://sourceforge.net/p/omegat/feature-requests/314/

  - Show where paragraphs begin and end
  https://sourceforge.net/p/omegat/feature-requests/431/

  Other changes:

  - Linux: Nimbus look and feel added to omegat.kaptn

  - New Polish, Czech and Slovak segmentation rules

  - When running scripts on the command line, mock bindings are added for 
"editor" and "glossary", and "console" output are written on System.out. 
Calls to console scripts are logged.


  Bug fixes:

  - The script auto_open_last_project was not working

  -  Error 404 when using IBM Watson
  https://sourceforge.net/p/omegat/bugs/932/

  - The user agent (used for instance for machine translation) was
not defined correctly

  Localisation Updates:

  - Italian localisation updated to 4.1.5 update 3 (documentation)

----------------------------------------------------------------------
 OmegaT 4.1.5 update 3 (2018-11-14)
----------------------------------------------------------------------
  2 Enhancements
  2 Bug fixes
  5 Localisation updates
----------------------------------------------------------------------
4.1.5 update 3 vs 4.1.5 update 2

  Implemented requests:

  - Add Moodle .php files filter
  https://sourceforge.net/p/omegat/feature-requests/1407/

  - Allow user to choose which MT suggestion to insert
  https://sourceforge.net/p/omegat/feature-requests/1406/

  Bug fixes:

  - Team projects: some Subversion network errors were not detected
as an offline condition
